feat : modificationColonne OK

--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -12,6 +12,7 @@
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutCarte.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutParticipant.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutColonne.js') }}" defer></script>
+    <script type="module" src="{{ asset('../ressources/javaScript/formulaireModificationColonne.js') }}" defer></script>
 
 
 </head>
