rebase : gros fix ajoutCarte

--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -97,7 +97,7 @@
         <div class="wrap"><h2>Création d'une carte</h2> <img class="closeCard" src="{{ asset('../tests/close.png') }}"
                                                              alt="">
         </div>
-        <input type="hidden" class="idColonne" data-reactiveInput="formulaireAjoutCarte.idColonne">
+        <input type="hidden" class="idColonne" value="">
         <div class="content"><h4>Titre de la carte :</h4>
             <input maxlength="50" required
                    data-reactiveInput="formulaireAjoutCarte.titre" type="text"
