feat : avancées modifierCarte

--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -93,7 +93,7 @@
 
     </div>
 
-    <div class="formulaireCreationCarte">
+    <div class="formulaireCreationCarte" data-modif="">
         <div class="wrap"><h2>Création d'une carte</h2> <img class="closeCard" src="{{ asset('../tests/close.png') }}"
                                                              alt="">
         </div>
