feat : avancées modifierCarte

--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -121,7 +121,7 @@
             </div>
             <div class="listeNouveauxParticipants"></div>
         </div>
-        <div class="boutonCreation" data-onclick="formulaireAjoutCarte.envoyerFormulaire">Créer</div>
+        <div class="boutonCreation" data-onclick="formulaireAjoutCarte">Créer</div>
     </div>
 
 
