--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -22,7 +22,7 @@
             <h3>{{ tableau.titreTableau }}</h3>
             <div class="allUsers">
                 <h4>Collaborateurs :</h4>
-                <span class="user"> {{ tableau.utilisateur.prenom|slice(0,1) }}{{ tableau.utilisateur.nom|slice(0,1) }}</span>
+                <span class="user" data-onload="utilisateur.creerUtilisateurDepuisBaseDeDonnees"> {{ tableau.utilisateur.prenom|slice(0,1) }}{{ tableau.utilisateur.nom|slice(0,1) }}</span>
                 {% for participant in collaborateurs %}
                     <span class="user">{{ participant.prenom|slice(0,1) }}{{ participant.nom|slice(0,1) }}</span>
                 {% endfor %}
