--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -22,9 +22,9 @@
             <h3>{{ tableau.titreTableau }}</h3>
             <div class="allUsers">
                 <h4>Collaborateurs :</h4>
-                <span class="user" data-onload="utilisateur.creerUtilisateurDepuisBaseDeDonnees"> {{ tableau.utilisateur.prenom|slice(0,1) }}{{ tableau.utilisateur.nom|slice(0,1) }}</span>
+                <span class="user" data-user="{{ tableau.utilisateur.login }}" data-onload="utilisateur.MAJUtilisateursDepuisBaseDeDonnees"> {{ tableau.utilisateur.prenom|slice(0,1) }}{{ tableau.utilisateur.nom|slice(0,1) }}</span>
                 {% for participant in collaborateurs %}
-                    <span class="user">{{ participant.prenom|slice(0,1) }}{{ participant.nom|slice(0,1) }}</span>
+                    <span class="user" data-user="{{ participant.login }}" >{{ participant.prenom|slice(0,1) }}{{ participant.nom|slice(0,1) }}</span>
                 {% endfor %}
                 <div class="invite">Partager <img src="{{ asset('../tests/inviter.png') }}" alt=""></div>
             </div>
@@ -51,7 +51,7 @@
                                     {% for idCarte,utilisateurs in participants %}
                                         {% if idCarte == carte.idCarte %}
                                             {% for utilisateur in utilisateurs %}
-                                                <span class="user">{{ utilisateur.prenom|slice(0,1) }}{{ utilisateur.nom|slice(0,1) }}</span>
+                                                <span class="user" data-user="{{ utilisateur.login }}" >{{ utilisateur.prenom|slice(0,1) }}{{ utilisateur.nom|slice(0,1) }}</span>
                                             {% endfor %}
                                         {% endif %}
                                     {% endfor %}
@@ -70,7 +70,7 @@
             <!-- Pour ajouter de nouvelles colonnes -->
             <div class="adder" data-tableau="{{ tableau.idTableau }}">
                 <label>
-                    <input type="text" maxlength="30" data-reactiveInput="formulaireAjoutColonne.titre"
+                    <input type="text" maxlength="20" data-reactiveInput="formulaireAjoutColonne.titre"
                            data-onEnter="formulaireAjoutColonne.envoyerFormulaireCreerColonne" class="input"
                            placeholder="Ajouter une colonne"/>
                 </label>
@@ -99,13 +99,13 @@
         </div>
         <input type="hidden" class="idColonne" value="">
         <div class="content"><h4>Titre de la carte :</h4>
-            <input maxlength="50" required
+            <input maxlength="30" required
                    data-reactiveInput="formulaireAjoutCarte.titre" type="text"
                    class="inputCreationCarte"
                    placeholder="Entrez le titre de la carte">
         </div>
         <div class="content"><h4>Description de la carte :</h4>
-            <textarea maxlength="255"
+            <textarea maxlength="200"
                       data-reactiveInput="formulaireAjoutCarte.description"
                       class="desc"
                       placeholder="Description de la carte...">
