--- a/src/vue/base/accueil.html.twig
+++ b/src/vue/base/accueil.html.twig
@@ -6,7 +6,7 @@
 {% block page_content %}
     <div><p>Bienvenue sur <strong>Trello-Trollé</strong>!</p></div>
     <div>
-        {% if idUtilisateurConnecte is not null %}
+        {% if connexionUtilisateur.loginUtilisateurConnecte is not null %}
         <span><a href="{{ route('afficherListeMesTableaux') }}">Consulter mes tableaux</a></span>
         {% else %}
         <p>
