--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -15,6 +15,8 @@
         let plusImageUrl = "{{ asset('../tests/plus.png') }}";
     </script>
 
+    <img src="{{ asset('../ressources/img/wait.gif') }}" class="waiting" alt="">
+
     <p>{{ tableau.utilisateur.nom is null }}</p>
     <div class="all">
 
