--- a/src/vue/utilisateur/formulaireCreation.html.twig
+++ b/src/vue/utilisateur/formulaireCreation.html.twig
@@ -3,7 +3,7 @@
 {% block page_title %}Trollé{% endblock %}
 
 {% block page_content %}
-    <<div>
+    <div>
     <form method="post" action="{{ route("creerDepuisFormulaire") }}">
         <fieldset>
             <h3>Inscription</h3>
