--- a/tests/tests.css
+++ b/tests/tests.css
@@ -925,3 +925,18 @@ body {
     }
 
 }
+
+.contenuUtilisateur {
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    z-index: 5;
+    width: 150px;
+    min-height: 100px;
+    border-radius: 5px;
+    color: white;
+    background-color: #23272b;
+    padding: 5px;
+}
