--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -35,7 +35,7 @@
                 <div class="invite">Partager <img src="{{ asset('../tests/inviter.png') }}" alt=""></div>
             </div>
         </div>
-        <div class="contenuUtilisateur" data-htmlfun="utilisateur.afficherContenuUtilisateur"></div>
+        <div class="contenuUtilisateur" data-htmlfun="utilisateur.afficherContenuUtilisateur()"></div>
 
         <div class="ul">
 
