--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -26,16 +26,16 @@
                 <h4>Collaborateurs :</h4>
                 <span class="user"
                       data-onhover="utilisateur.afficherContenuUtilisateur({{ tableau.utilisateur.login }})"
+                      data-onleave="utilisateur.cacherContenuUtilisateur({{ tableau.utilisateur.login }})"
                       data-user="{{ tableau.utilisateur.login }}"
                       data-onload="utilisateur.MAJUtilisateursDepuisBaseDeDonnees"> {{ tableau.utilisateur.prenom|slice(0,1) }}{{ tableau.utilisateur.nom|slice(0,1) }}</span>
-                <div class="contenuUtilisateur {{ tableau.utilisateur.login }}"
-                     data-htmlfun="utilisateur.afficherElements({{ tableau.utilisateur.login }})"></div>
+                <div class="contenuUtilisateur {{ tableau.utilisateur.login }}"></div>
 
                 {% for participant in collaborateurs %}
                     <span class="user" data-onhover="utilisateur.afficherContenuUtilisateur({{ participant.login }})"
+                          data-onleave="utilisateur.cacherContenuUtilisateur({{ participant.login }})"
                           data-user="{{ participant.login }}">{{ participant.prenom|slice(0,1) }}{{ participant.nom|slice(0,1) }}</span>
-                    <div class="contenuUtilisateur {{ participant.login }}"
-                         data-htmlfun="utilisateur.afficherElements({{ participant.login }})"></div>
+                    <div class="contenuUtilisateur {{ participant.login }}"></div>
                 {% endfor %}
             </div>
         </div>
