rebase : fichiers à leurs emplacements correspondants

--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -11,8 +11,8 @@
         let apiBase = siteBase + "/api";</script>
 
     <script>
-        let bulletsImageUrl = "{{ asset('../tests/bullets.png') }}";
-        let plusImageUrl = "{{ asset('../tests/plus.png') }}";
+        let bulletsImageUrl = "{{ asset('../ressources/img/bullets.png') }}";
+        let plusImageUrl = "{{ asset('../ressources/img/plus.png') }}";
     </script>
 
     <img src="{{ asset('../ressources/img/wait.gif') }}" class="waiting" alt="">
@@ -31,7 +31,7 @@
                       data-user="{{ tableau.utilisateur.login }}"
                       data-onload="utilisateur.MAJUtilisateursDepuisBaseDeDonnees"> {{ tableau.utilisateur.prenom|slice(0,1) }}{{ tableau.utilisateur.nom|slice(0,1) }}</span>
                 <div class="contenuUtilisateur {{ tableau.utilisateur.login }}"></div>
-                <div class="divSupprimerUtilisateur"><span>Supprimer<img src="{{ asset('../tests/bin.png') }}"
+                <div class="divSupprimerUtilisateur"><span>Supprimer<img src="{{ asset('../ressources/img/bin.png') }}"
                                                                          alt=""></span></div>
 
                 {% for participant in collaborateurs %}
@@ -41,7 +41,7 @@
                           data-user="{{ participant.login }}">{{ participant.prenom|slice(0,1) }}{{ participant.nom|slice(0,1) }}</span>
                     <div class="contenuUtilisateur {{ participant.login }}"></div>
                 {% endfor %}
-                <div class="invite">Partager <img src="{{ asset('../tests/inviter.png') }}" alt=""></div>
+                <div class="invite">Partager <img src="{{ asset('../ressources/img/inviter.png') }}" alt=""></div>
 
             </div>
         </div>
@@ -54,7 +54,7 @@
                     <!-- Entete de la colonne avec son titre et ses bullets -->
                     <div class="entete">
                         <h5 class="main" draggable="true">{{ colonnes[i].titreColonne }}</h5>
-                        <div class="bullets"><img src="{{ asset('../tests/bullets.png') }}" alt=""></div>
+                        <div class="bullets"><img src="{{ asset('../ressources/img/bullets.png') }}" alt=""></div>
                     </div>
 
                     <!-- Stockage des cartes -->
@@ -79,7 +79,7 @@
                     </div>
 
                     <div class="add" data-columns="{{ colonnes[i].idColonne }}">
-                        <img src="{{ asset('../tests/plus.png') }}" alt="">
+                        <img src="{{ asset('../ressources/img/plus.png') }}" alt="">
                         Ajouter une carte
                     </div>
                 </div>
@@ -98,14 +98,14 @@
 
         <!-- Menu pour modifier/supprimer une colonne (appelé depuis les bullets) -->
         <div class="menuColonnes">
-            <img src="{{ asset('../tests/close.png') }}" alt="" class="close">
+            <img src="{{ asset('../ressources/img/close.png') }}" alt="" class="close">
             <div class="deleteColumn">
                 <h5>Supprimer</h5>
-                <img src="{{ asset('../tests/bin.png') }}" alt="">
+                <img src="{{ asset('../ressources/img/bin.png') }}" alt="">
             </div>
             <div class="updateColumn">
                 <h5>Modifier</h5>
-                <img src="{{ asset('../tests/edition.png') }}" alt="">
+                <img src="{{ asset('../ressources/img/edition.png') }}" alt="">
             </div>
         </div>
 
@@ -113,7 +113,7 @@
 
     <div class="formulaireCreationCarte" data-modif="">
         <div class="wrap"><h2 class="titreCreationCarte">Création d'une carte</h2> <img class="closeCard"
-                                                                                        src="{{ asset('../tests/close.png') }}"
+                                                                                        src="{{ asset('../ressources/img/close.png') }}"
                                                                                         alt="">
         </div>
         <input type="hidden" class="idColonne" value="">
@@ -146,7 +146,7 @@
 
     <div class="formulaireAjoutMembreTableau" data-tableau="{{ tableau.idTableau }}">
         <div class="wrap"><h2>Ajout de Collaborateurs</h2> <img onclick="listenerFermerAjoutMembre()" class="closeCard"
-                                                                src="{{ asset('../tests/close.png') }}"
+                                                                src="{{ asset('../ressources/img/close.png') }}"
                                                                 alt="">
         </div>
         <div class="content"><h4>Adresse mail du collaborateur :</h4>
@@ -165,7 +165,7 @@
     <div class="formulaireModificationColonne">
         <div class="wrap">
             <h2>Modification de la colonne</h2>
-            <img class="closeColumn" src="{{ asset('../tests/close.png') }}" alt="">
+            <img class="closeColumn" src="{{ asset('../ressources/img/close.png') }}" alt="">
         </div>
         <div class="content">
             <h4>Nouveau titre :</h4>
